--- a/input/css/style.css
+++ b/input/css/style.css
@@ -20,8 +20,8 @@ main {
 form {
   font-size: 32px;
   color: palegreen;
-  height: 370px;
-  width: 315px;
+  height: auto;
+  width: auto;
   padding: 35px;
   border-radius: 10%;
   box-shadow: 0px 0px 12px 4px rgba(137, 243, 54, 0.74);
