--- a/input/css/style.css
+++ b/input/css/style.css
@@ -41,7 +41,9 @@ input {
   font-size: 30px;
 }
 .button {
-  margin-left: 105px;
+  margin: 0 auto;
+  display: flex;
+  width: auto;
   box-shadow: 0px 0px 12px 4px rgba(137, 243, 54, 0.74);
   color: palegreen;
   background: transparent;
