--- a/input/css/style.css
+++ b/input/css/style.css
@@ -23,7 +23,7 @@ form {
   height: auto;
   width: auto;
   padding: 35px;
-  border-radius: 10%;
+  border-radius: 20px;
   box-shadow: 0px 0px 12px 4px rgba(137, 243, 54, 0.74);
   background-image: linear-gradient(darkgreen, transparent);
 }
