--- a/catalog/css/catalog.css
+++ b/catalog/css/catalog.css
@@ -28,7 +28,7 @@ div > h1 {
 .product {
   width: 350px;
   height: 530px;
-  background-color: #ffb200;
+  background-color: #e09d00;
   border: 4px solid #e4003a;
   margin: 30px auto 10px auto;
   border-radius: 30px;
@@ -102,33 +102,3 @@ div > h1 {
   color: #000;
   transform: scale(1.1);
 }
-
-/* .buy {
-  font-family: "Comic Sans MS", cursive, sans-serif;
-  font-size: 16px;
-  background-color: #e4003a;
-  color: #fff;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 10px;
-  box-shadow: 2px 2px 0 #000;
-  cursor: pointer;
-}
-@keyframes pop {
-  0% {
-    transform: scale(1);
-  }
-  10% {
-    transform: scale(0.8);
-  }
-  50% {
-    transform: scale(1.2);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.buy:hover {
-  animation: pop 0.5s ease;
-} */
