--- a/catalog/css/product.css
+++ b/catalog/css/product.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 80%;
   margin: 0 auto;
-  background: #ffcc00;
+  background: #ffb200;
   border: 5px solid #ff0000;
   border-radius: 30px;
   box-shadow: 6px 6px 0 #000;
@@ -23,8 +23,13 @@ img {
 
 .product-info {
   flex: 1;
-  min-width: 280px;
   text-align: left;
+  border: solid black 2px;
+  padding: 6px;
+  border-radius: 10px;
+  box-shadow: 6px -6px 0 #000;
+  font-weight: bold;
+  font-size: 22px;
 }
 
 .product-info p {
@@ -64,4 +69,20 @@ form {
   background-color: #000;
   color: #fff;
   transform: scale(1.05);
+}
+.sign-in {
+  font-size: 26px;
+  font-weight: bold;
+  border: solid purple 1px;
+  width: 500px;
+  box-shadow: 4px 4px 0 #000;
+  border-radius: 10px;
+}
+.nonuser-button {
+  width: 500px;
+  display: flex;
+  justify-content: center;
+}
+.create-acc {
+  margin-left: 50px;
 }
